# genetic_gpu_draw

./: .gitignore  CMakeLists.txt  GeneticGPUDraw.ipynb  drawer.cpp
include/: consts.h  exepath.h  framebuffer.h  framebuffer_cache.h  main_class.h  progressBar.h  shaderClass.h  textureClass.h  triangle.h
include/errorfn/: errorfn.h
include/glad/: glad.h
include/images/: image.h  save.h  svg.h
include/texturesampler/: sampler.h
include/triangles/: collection.h  constants.h  triangle.h
shaders/: difference_shader.glsl  passthroughFragShader.glsl  sample_shader.glsl  simpleFragShader.glsl  simpleVertShader.glsl  summation_shader_columns.glsl  summing_shader.glsl  triangle_vert_shader.glsl
src/: exepath.cpp  framebuffer.cpp  framebuffer_cache.cpp  glad.cpp  parse_args.cpp  shaderClass.cpp  textureClass.cpp  triangle.cpp
src/errorfn/: errorfn.cpp
src/images/: image.cpp  save.cpp  svg.cpp
src/texturesampler/: sampler.cpp
src/triangles/: collection.cpp  triangle.cpp
